**** Changes ****

v2.2
----
 - new: caching attribute for entity attributes
 - fix: Instance.get(key) now takes an Object argument to propery inherit parent's generic getter
 - added the debugging method $query.queryString
 - url, driver and schema can now be part of <database> or of <credentials>
 - populate last inserted IDs in instances when needed on insertion
 - Entity.extractColumnValues now allows additionnal columns when comming from the sql side
 - fix: HttpQueryTool needed a get(String) method besides the get(Object) one to properly override inherited generic getter
 - added a <credentials> element
 - added method instance.setColumns
 - HttpQueryTool now interpret dots in keys as parent key and subkey pair
 - fix: cache key calculation was not always right
 - internal instance values are now stored using sql column values
   and aliases can be multiple
 - added an experimental DBResourceLoader Velocity resource loader
 - fix: aliases were not taken into account in Entity.extractColumnValues
 - fix: aliases were never read by the ConfigLoader
 - the localizer tool now checks if the locale changes in the session
 - fix: authentication filter now also remembers the query string of the saved request
 - $query now displays a nice content as a map
 - added entityref.delete(string) and entityref.delete(number) for unique primary cols
 - fix: exported keys were broken.
 - fix: do not forget query string when redirecting!
 - fix: validation: unecessary user context re-creations avoided
 - added user context getter and setter to DBReference
 - configLoader should know FATAL error level, even if very unfrequent
 - Entity.fetch(Map) now checks for key values instead of throwing an exception if they are not present
 - added the missing EntityReference.newInstance(Map) method
 - fix: some methods of UserContext had to be synchronized
 - UserContext.getValidationErrors() now clears the validation errors for the next call